--- a/index.html
+++ b/index.html
@@ -6,12 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/rest.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>About me</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
-    <script src="js/app.js"></script>
+    <header>
+        <nav class="navbar">
+            <ul class="navbar_ul">
+                <li><a href="#">about</a></li>
+                <li><a href="#">contact</a></li>
+                <li><a href="#">other</a></li>
+            </ul>
+        </nav>
+        <h2 id="userName"></h2>
+    </header>
+    <main>
+        <article>
+            <section class="container">
+                    <div class="item">
+                        <h2>intro</h2>
+                        <p>
+                            My name is Khalid Hamedi and I am a full-stack Web Application Developer and Software Developer, currently living in Irbid .Jordan. I have a Bachelor of Management Information Systems from Balqa Applied University, and my primary focus and inspiration for my studies is Web Development. In my free time, I study human computer interface and the psychology of human computer interaction. I am both driven and self-motivated, and I am constantly experimenting with new technologies and techniques. I am very passionate about Web Development, and strive to better myself as a developer, and the development community as a whole.
+                        </p>
+                    </div>
+                    <div class="item">
+                        <h2>Languages List</h2>
+                        <p>
+                            I have been studying web development since 2009 and I develop in both C# and PHP, though I primarily use C#. I am experienced in both front and back-end development, and I am proficient in HTML/HTML5, CSS/CSS3, LESS, SASS, XML, JavaScript, jQuery, AJAX, and SQL/MySQL/PostgreSQL, to name a few. I am also proficient in many non-web-based languages, including but not limited to Java, Scheme/Racket, C, ACL2 (LISP), and MIPS Assembly. I have also worked on some smaller Python projects, and have used the language to create one-time use tools for data processing and similar purposes.
+                        </p>
+                    </div>
+                    <div class="item">
+                        <h2>Experience</h2>
+                    <p>
+                        I am a Sitecore Certified Professional Web Developer, and have been developing enterprise solutions using the Sitecore content management system since 2012. I have worked on over ten different Sitecore solutions, ranging from a major travel engine's online booking engine to an internal site for one of the "Big Four" accounting firms, and beyond. An early version of one of my JavaScript plugins (license included) is also visible in the view source of the news site for the Xbox One.
+
+                        Since 2012, I have been working with responsive design integration, and have experimented with several responsive techniques and tools. I have worked with Twitter Bootstrap, although I prefer to add responsive support manually, whenever possible. I am a very big fan of using media queries on my sites and I strive to design layouts that can easily be optimized for aesthetic appeal on each of desktops, tablets and cell phones. This site uses a responsive design, and I have completed responsive integration throughout most of the site.
+                    </p>
+                    </div>                  
+            </section>
+        </article>
+    </main>
+    <footer>
+        <p>Note: This is what I aspire to write something like after completing the course</p>
+    </footer>
+ <script src="js/app.js"></script>
 </body>
 </html>
