--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     </p>
                     </div>                  
             </section>
+            <button id="btn">Start Quizz</button>
         </article>
     </main>
     <footer>
