--- a/index.html
+++ b/index.html
@@ -50,51 +50,51 @@
                         <div class="group1">
                             <div class="img-container">
                                 <h3>Lionel Messi (Barcelona)</h3>
-                                <img src="https://images.immediate.co.uk/production/volatile/sites/3/2020/02/GettyImages-1190633692-2fd85a8-scaled.jpg?webp=true&quality=90&resize=620%2C413" alt="">
+                                <img src="https://images.immediate.co.uk/production/volatile/sites/3/2020/02/GettyImages-1190633692-2fd85a8-scaled.jpg?webp=true&quality=90&resize=620%2C413" alt="Lionel Messi">
                             </div>
                             <div class="img-container">
                                 <h3> Robert Lewandowski (Bayern Munich)</h3>
-                                <img src="https://images.immediate.co.uk/production/volatile/sites/3/2020/02/GettyImages-1173036408-6cb6fae-scaled.jpg?webp=true&quality=90&resize=620%2C413" alt="">
+                                <img src="https://images.immediate.co.uk/production/volatile/sites/3/2020/02/GettyImages-1173036408-6cb6fae-scaled.jpg?webp=true&quality=90&resize=620%2C413" alt="Robert Lewandowski">
                             </div>
                             <div class="img-container">
                                 <h3>Kevin De Bruyne (Man City)</h3>
-                                <img src="https://media.bleacherreport.com/w_800,h_533,c_fill/br-img-images/003/702/119/hi-res-9624d33c6ce973e8c0799a4a2c914401_crop_north.jpg" alt="">
+                                <img src="https://media.bleacherreport.com/w_800,h_533,c_fill/br-img-images/003/702/119/hi-res-9624d33c6ce973e8c0799a4a2c914401_crop_north.jpg" alt="Kevin De Bruyne">
                             </div>
                         </div>
             
                             <div class="group2">
                                 <div class="img-container">
                                     <h3>Cristiano Ronaldo (Juventus)</h3>
-                                    <img src="https://api.internationalchampionscup.com/v1/storage/41798a8c-dd23-44fe-abe9-29ba06ac4459?w=1600" alt="">
+                                    <img src="https://api.internationalchampionscup.com/v1/storage/41798a8c-dd23-44fe-abe9-29ba06ac4459?w=1600" alt="Cristiano Ronaldo">
                                 </div>
                                 <div class="img-container">
                                     <h3>Erling Haaland (Dortmund)</h3>
-                                    <img src="https://static.dw.com/image/52145302_303.jpg" alt="">
+                                    <img src="https://static.dw.com/image/52145302_303.jpg" alt="Erling Haaland">
                                 </div>
                                 <div class="img-container">
                                     <h3>Kylian Mbappe (PSG)</h3>
-                                    <img src="https://images.immediate.co.uk/production/volatile/sites/3/2020/05/GettyImages-1204203260-0bfae6c.jpg?webp=true&quality=90&resize=619%2C413" alt="">
+                                    <img src="https://images.immediate.co.uk/production/volatile/sites/3/2020/05/GettyImages-1204203260-0bfae6c.jpg?webp=true&quality=90&resize=619%2C413" alt="Kylian Mbappe">
                                 </div>
                             </div>
             
                             <div class="group3">
                                 <div class="img-container">
                                     <h3>Virgil van Dijk (Liverpool)</h3>
-                                    <img src="https://i.guim.co.uk/img/media/2a76956ad5940b980f0812fedbb75450313fb71a/281_371_2589_1553/master/2589.jpg?width=445&quality=45&auto=format&fit=max&dpr=2&s=ebfc3ad186c8324416eadaa07fe83fff" alt="">
+                                    <img src="https://i.guim.co.uk/img/media/2a76956ad5940b980f0812fedbb75450313fb71a/281_371_2589_1553/master/2589.jpg?width=445&quality=45&auto=format&fit=max&dpr=2&s=ebfc3ad186c8324416eadaa07fe83fff" alt="Virgil van Dijk">
                                 </div>
                                 <div class="img-container">
                                     <h3>Joshua Kimmich (Bayern)</h3>
-                                    <img src="https://static.dw.com/image/47844747_401.jpg" alt="">
+                                    <img src="https://static.dw.com/image/47844747_401.jpg" alt="Joshua Kimmich">
                                 </div>
                                 <div class="img-container">
                                     <h3>Neymar (PSG) </h3>
-                                    <img src="https://s.france24.com/media/display/76e84406-9ca4-11eb-b1fb-005056bff430/w:1280/p:16x9/2fdf0aaec3b44bfa58c1a4a95a4a1aca4d96c60d.webp" alt="">
+                                    <img src="https://s.france24.com/media/display/76e84406-9ca4-11eb-b1fb-005056bff430/w:1280/p:16x9/2fdf0aaec3b44bfa58c1a4a95a4a1aca4d96c60d.webp" alt="Neymar">
                                 </div>
                             </div>
                             <div class="group4">
                                 <div class="img-container">
                                     <h3>Mohamed Salah (Liverpool)</h3>
-                                    <img src="https://images.daznservices.com/di/library/GOAL/43/ce/mohamed-salah-liverpool-2020-21_1abllx5skrkdm1mgnkmtjlzeex.jpg?quality=60&w=800" alt="">
+                                    <img src="https://images.daznservices.com/di/library/GOAL/43/ce/mohamed-salah-liverpool-2020-21_1abllx5skrkdm1mgnkmtjlzeex.jpg?quality=60&w=800" alt="Mohamed Salah">
                                 </div>
                             </div>
                 </section>
